[gd_scene load_steps=6 format=3 uid="uid://cd34un78dupu2"]

[ext_resource type="Script" path="res://assets/gui/debug.gd" id="1_skyv3"]
[ext_resource type="LabelSettings" uid="uid://1phn4kwkxmof" path="res://assets/gui/label_settings.tres" id="2_d47i5"]
[ext_resource type="PackedScene" uid="uid://b5rm52irse7gj" path="res://assets/map/pedestal.tscn" id="2_xv1br"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aqsvd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jwcyb"]

[node name="debug" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_skyv3")
pedestal_scene = ExtResource("2_xv1br")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="itemcon" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="itemup" type="Button" parent="HBoxContainer/itemcon"]
layout_mode = 2
focus_neighbor_top = NodePath("../itemdown")
focus_neighbor_right = NodePath("../../namcon/nameup")
focus_neighbor_bottom = NodePath("../itemdown")
theme_override_styles/focus = SubResource("StyleBoxTexture_aqsvd")
flat = true

[node name="Label" type="Label" parent="HBoxContainer/itemcon/itemup"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "^"
label_settings = ExtResource("2_d47i5")

[node name="item" type="Label" parent="HBoxContainer/itemcon"]
layout_mode = 2
text = "coin"
label_settings = ExtResource("2_d47i5")

[node name="itemdown" type="Button" parent="HBoxContainer/itemcon"]
layout_mode = 2
focus_neighbor_top = NodePath("../itemup")
focus_neighbor_right = NodePath("../../namcon/namdown")
focus_neighbor_bottom = NodePath("../itemup")
theme_override_styles/focus = SubResource("StyleBoxTexture_jwcyb")
flat = true

[node name="Label" type="Label" parent="HBoxContainer/itemcon/itemdown"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "v"
label_settings = ExtResource("2_d47i5")

[node name="namcon" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="nameup" type="Button" parent="HBoxContainer/namcon"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_aqsvd")
flat = true

[node name="Label" type="Label" parent="HBoxContainer/namcon/nameup"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "^"
label_settings = ExtResource("2_d47i5")

[node name="nam" type="Label" parent="HBoxContainer/namcon"]
layout_mode = 2
text = " "
label_settings = ExtResource("2_d47i5")

[node name="namdown" type="Button" parent="HBoxContainer/namcon"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_jwcyb")
flat = true

[node name="Label" type="Label" parent="HBoxContainer/namcon/namdown"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "v"
label_settings = ExtResource("2_d47i5")

[connection signal="focus_entered" from="HBoxContainer/itemcon/itemup" to="." method="_on_itemup_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/itemcon/itemup" to="." method="_on_itemup_focus_exited"]
[connection signal="pressed" from="HBoxContainer/itemcon/itemup" to="." method="_on_itemup_pressed"]
[connection signal="focus_entered" from="HBoxContainer/itemcon/itemdown" to="." method="_on_itemdown_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/itemcon/itemdown" to="." method="_on_itemdown_focus_exited"]
[connection signal="pressed" from="HBoxContainer/itemcon/itemdown" to="." method="_on_itemdown_pressed"]
[connection signal="focus_entered" from="HBoxContainer/namcon/nameup" to="." method="_on_nameup_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/namcon/nameup" to="." method="_on_nameup_focus_exited"]
[connection signal="pressed" from="HBoxContainer/namcon/nameup" to="." method="_on_nameup_pressed"]
[connection signal="focus_entered" from="HBoxContainer/namcon/namdown" to="." method="_on_namdown_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/namcon/namdown" to="." method="_on_namdown_focus_exited"]
[connection signal="pressed" from="HBoxContainer/namcon/namdown" to="." method="_on_namdown_pressed"]
